<resources>
    <string name="app_name">Mini Stockbit</string>
    <string name="or">Atau</string>
    <string name="action_sign_in_with_google">Masuk dengan Google</string>
    <string name="action_sign_in_with_facebook">Masuk dengan Facebook</string>
    <string name="hint_username_or_email">Username atau Email</string>
    <string name="hint_password">Password</string>
    <string name="action_forgot_password">Lupa Password</string>
    <string name="action_login">Login</string>
    <string name="action_login_with_fingerprint">Masuk dengan Fingerprint</string>
    <string name="action_dont_have_account">Belum punya akun? Daftar Sekarang</string>
    <string name="toolbar_title_login">Masuk</string>
    <string name="toolbar_title_watchlist">Watchlist</string>
    <string name="toolbar_title_stream">Stream</string>
    <string name="toolbar_title_search">Search</string>
    <string name="toolbar_title_chat">Chat</string>
    <string name="toolbar_title_portfolio">Portfolio</string>
    <string name="action_all_watchlist">All Watchlist</string>
    <string name="action_add_symbol">Add Symbol</string>
    <string name="action_retry">Coba Lagi</string>
    <string name="message_error_occurred">Terjadi Kesalahan</string>
</resources>