<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/fragment_login">

    <fragment
        android:id="@+id/fragment_login"
        android:name="com.drianmr.stockbit.mini.ui.login.LoginFragment"
        android:label="@string/toolbar_title_login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_watchlistFragment"
            app:destination="@id/menu_watchlist"
            app:popUpTo="@id/menu_watchlist"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/menu_watchlist"
        android:name="com.drianmr.stockbit.mini.ui.watchlist.WatchlistFragment"
        android:label="@string/toolbar_title_watchlist"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/menu_stream"
        android:name="com.drianmr.stockbit.mini.ui.stream.StreamFragment"
        android:label="@string/toolbar_title_stream"
        tools:layout="@layout/fragment_stream" />

    <fragment
        android:id="@+id/menu_search"
        android:name="com.drianmr.stockbit.mini.ui.search.SearchFragment"
        android:label="@string/toolbar_title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/menu_chat"
        android:name="com.drianmr.stockbit.mini.ui.chat.ChatFragment"
        android:label="@string/toolbar_title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/menu_portfolio"
        android:name="com.drianmr.stockbit.mini.ui.portfolio.PortfolioFragment"
        android:label="@string/toolbar_title_portfolio"
        tools:layout="@layout/fragment_portfolio" />

</navigation>