<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.watchlist.WatchlistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_watchlist"
            style="@style/Widget.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_all_watchlist"
            android:textColor="@color/black_text"
            app:icon="@drawable/ic_round_keyboard_arrow_down_24"
            app:iconGravity="end"
            app:iconTint="@color/black_text"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/black_ripple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add_symbol"
            style="@style/Widget.Button.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_add_symbol"
            android:textColor="@color/grey"
            app:icon="@drawable/ic_round_add_circle_outline_24"
            app:iconGravity="start"
            app:iconSize="20dp"
            app:iconTint="@color/grey"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/black_ripple" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_watchlist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_watchlist"
            tools:listitem="@layout/item_watchlist" />

        <LinearLayout
            android:id="@+id/container_error"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_watchlist"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="128dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/illustration_warning" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/message_error_occurred"
                android:textAppearance="@style/TextAppearance.Regular.Regular"
                android:textColor="@color/grey" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_retry"
                style="@style/Widget.Button.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/action_retry" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>